Made improvements for mobile: media queries to make text scale better and to stop overlap on the cards

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,6 +16,11 @@ header {
     background-color: var(--secondary-color);
 }
 
+.card-body {
+    word-break: normal;
+    overflow-wrap: normal;
+}
+
 .card-carousel {
     display: grid;
     grid-template-columns: auto 1fr auto;
@@ -26,7 +31,7 @@ header {
     grid-template-columns: repeat(7, 1fr);
     grid-template-rows: 1fr;
     column-gap: 20px;
-    height: 300px;
+    height: 350px;
 }
 
 .card-carousel-item-1 {
@@ -52,7 +57,7 @@ header {
     opacity: 1;
     transform: scale(1) translateX(0);
     transform-origin: center center;
-    height: 300px;
+    height: 350px;
 }
 
 .card-carousel-item.inactive {
@@ -79,8 +84,8 @@ header {
 
 /* Custom util classes to extend bootstrap */
 
-.w-md-75 {
-    width: min(75%, 576px);
+.w-md-90 {
+    width: min(90%, 691px);
 }
 
 .w-200px {
@@ -103,4 +108,58 @@ button.disabled {
     nav {
         flex-direction: column;
     }
+
+    .card-carousel-items {
+        grid-template-columns: repeat(3, 1fr);
+    }
+
+    .card-carousel-item-1 {
+        grid-area: 1 / 1 / 2 / 2;
+    }
+
+    .card-carousel-item-2 {
+        grid-area: 1 / 2 / 2 / 3;
+    }
+
+    .card-carousel-item-3 {
+        grid-area: 1 / 3 / 2 / 4;
+    }
+
+    .card-carousel-item {
+        height: auto;
+    }
+}
+
+@media (max-height: 768px) {
+    .card-carousel-items {
+        grid-template-columns: repeat(3, 1fr);
+    }
+
+    .card-carousel-item-1 {
+        grid-area: 1 / 1 / 2 / 2;
+    }
+
+    .card-carousel-item-2 {
+        grid-area: 1 / 2 / 2 / 3;
+    }
+
+    .card-carousel-item-3 {
+        grid-area: 1 / 3 / 2 / 4;
+    }
+
+    .card-carousel-item {
+        height: auto;
+    }
+}
+
+@media (max-width: 768px) and (orientation: portrait) {
+  :root {
+    --bs-body-font-size: clamp(0.8rem, 1vw, 1.2rem) !important;
+  }
+}
+
+@media (max-height: 500px) and (orientation: landscape) {
+  :root {
+    --bs-body-font-size: clamp(0.8rem, 1vh, 1.2rem) !important;
+  }
 }
